⚙️ chore : 프로젝트 세팅 (#2)
* chore : 이슈 템플릿 생성

* chore : 풀 리퀘스트 템플릿 생성

* chore : 설정 파일을 yml로 변경

* chore : 프로젝트 의존성 설정

* chore : mysql 초기 설정

* chore : spring web 의존성 추가

* chore : spotless 플러그인 추가

* chore : spotless pre-commit 적용 추가

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
+
+	// spotless plugin
+	id 'com.diffplug.spotless' version '6.23.3'
 }
 
 group = 'com.pickkasso'
@@ -11,6 +14,12 @@ java {
 	sourceCompatibility = '17'
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
@@ -18,8 +27,49 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'org.springframework.security:spring-security-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+tasks.register('updateGitHooks', Copy) {
+	from new File(rootProject.rootDir, '.script/pre-commit')
+	into { new File(rootProject.rootDir, '.git/hooks') }
+	Runtime.getRuntime().exec("cmd /c chmod -R +x .git/hooks/")
+}
+
+// compileJava 태스크가 실행되기 전에 spotlessApply 태스크가 먼저 실행되도록 구성
+tasks.named('compileJava') {
+	dependsOn 'spotlessApply'
+	dependsOn 'updateGitHooks'
+}
+
+spotless {
+	java {
+		// Google Java 포맷 적용
+		/*
+            googleJavaFormat() : 탭은 2개의 공백
+            googleJavaFormat().aosp() : 탭은 4개의 공백
+            Reference : https://github.com/google/google-java-format/issues/525
+         */
+		googleJavaFormat().aosp()
+		// 아래 순서로 import문 정렬
+		importOrder('java', 'javax', 'jakarta', 'org', 'com')
+		// 사용하지 않는 import 제거
+		removeUnusedImports()
+		// 각 라인 끝에 있는 공백을 제거
+		trimTrailingWhitespace()
+	}
 }
