--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
         default_batch_fetch_size: 1000
   jackson:
     property-naming-strategy: SNAKE_CASE
+
+springdoc:
+  swagger-ui:
+    tags-sorter: alpha
+    operations-sorter: alpha
+  use-fqn: true
