⚙️ chore : swagger 세팅 (#4)
* chore : spotless pre-commit 설정 제거

* chore : swagger 세팅 추가

--- a/build.gradle
+++ b/build.gradle
@@ -39,21 +39,18 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
-tasks.register('updateGitHooks', Copy) {
-	from new File(rootProject.rootDir, '.script/pre-commit')
-	into { new File(rootProject.rootDir, '.git/hooks') }
-	Runtime.getRuntime().exec("cmd /c chmod -R +x .git/hooks/")
-}
 
 // compileJava 태스크가 실행되기 전에 spotlessApply 태스크가 먼저 실행되도록 구성
 tasks.named('compileJava') {
 	dependsOn 'spotlessApply'
-	dependsOn 'updateGitHooks'
 }
 
 spotless {
