--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,13 @@ dependencies {
 	// Querydsl
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 
+	//amazon S3
+	implementation 'software.amazon.awssdk:s3:2.17.105'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// Spring Security Core
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
